--- a/celebrate/assets/css/contact.css
+++ b/celebrate/assets/css/contact.css
@@ -2,6 +2,7 @@
 /* ==================================================
 # General
 ===================================================*/
+
 * {
     margin: 0;
     padding: 0;
@@ -51,7 +52,6 @@ section .display-4 {
 
 /* ==== End Query ===== */
 
-
 /* ==================================================
 # Contact
 ===================================================*/
@@ -68,6 +68,10 @@ section .display-4 {
 #contact .display-4 {
     position: relative;
     font-size: 30px;
+}
+
+#contact .map .display-4 {
+    padding-bottom: 25px;
 }
 
 #contact p.lead {
@@ -159,6 +163,12 @@ section .display-4 {
     margin-top: -37px;
 }
 
+#contact iframe {
+    width: 100%;
+    height: 450px;
+    border: 0;
+}
+
 /* ======= Media Queries ======= */
 
 @media only screen and (max-width: 1060px) {
@@ -175,6 +185,9 @@ section .display-4 {
     }
     #contact .display-4 {
         padding: 0 160px;
+    }
+    #contact .map .display-4 {
+        padding-bottom: 25px;
     }
     #contact .col-form {
         width: 100%;
@@ -197,6 +210,9 @@ section .display-4 {
     #contact .display-4 {
         font-size: 30px;
         padding: 0 80px;
+    }
+    #contact .map .display-4 {
+        padding-bottom: 25px;
     }
     #contact .display-4::before {
         position: absolute;
