--- a/celebrate/assets/css/mybookings.css
+++ b/celebrate/assets/css/mybookings.css
@@ -2,12 +2,13 @@
 /* ==================================================
 # General
 ===================================================*/
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Source Sans Pro', sans-serif;
-    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+    /* font-family: 'Source Sans Pro', sans-serif; */
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -108,6 +109,38 @@ section .display-4 {
     color: var(--secondary-color);
 }
 
+#bookings .bookings-table table {
+    width: 100%;
+    height: auto;
+    border-collapse: collapse;
+}
+
+#bookings .bookings-table table th, #bookings .bookings-table table td {
+    text-align: left;
+    padding: 10px 0;
+    padding-left: 20px;
+    border-bottom: 1px solid var(--light-gray-color);
+}
+
+#bookings .bookings-table table #t-header {
+    border-top: 3px solid var(--primary-color);
+    border-bottom: 3px solid var(--primary-color);
+    background: var(--light-color);
+    padding: 30px 0;
+    color: var(--primary-color);
+    font-size: 15px;
+}
+
+#bookings .bookings-table table td {
+    background: var(--light-color);
+    border-bottom: 1px solid var(--light-gray-color);
+}
+
+#bookings .bookings-table table td .mc-img {
+   width: 60px;
+   height: 45px;
+}
+
 /* ======= Media Queries ======= */
 
 @media only screen and (max-width: 768px) {
@@ -143,6 +176,9 @@ section .display-4 {
         flex-direction: column;
         /* gap: 1em; */
         margin-bottom: 11px;
+    }
+    #bookings .bookings-table table {
+        overflow-x: scroll;
     }
 }
 
