--- a/celebrate/assets/css/mybookings.css
+++ b/celebrate/assets/css/mybookings.css
@@ -98,6 +98,10 @@ section .display-4 {
     padding-left: 20px;
 }
 
+#bookings .booking-not-found {
+    display: none;
+}
+
 #bookings .bookings .upcoming:hover, #bookings .bookings .all:hover {
     color: var(--danger-color);
     cursor: pointer;
@@ -107,6 +111,12 @@ section .display-4 {
     font-size: 16px;
     text-decoration: none;
     color: var(--secondary-color);
+}
+
+#bookings .bookings-table {
+    display: flex;
+    justify-content: stretch;
+    align-items: center;
 }
 
 #bookings .bookings-table table {
@@ -137,8 +147,46 @@ section .display-4 {
 }
 
 #bookings .bookings-table table td .mc-img {
-   width: 60px;
-   height: 45px;
+    width: 60px;
+    height: 45px;
+}
+
+#bookings .bookings-table-2 {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+#bookings .bookings-table-2 table {
+    width: 50%;
+    height: auto;
+    border-collapse: collapse;
+}
+
+#bookings .bookings-table-2 table th, #bookings .bookings-table-2 table td {
+    text-align: left;
+    padding: 10px 0;
+    padding-left: 20px;
+    border-bottom: 1px solid var(--light-gray-color);
+}
+
+#bookings .bookings-table-2 table #t-header {
+    border-top: 3px solid var(--primary-color);
+    border-bottom: 3px solid var(--primary-color);
+    background: var(--light-color);
+    padding: 30px 0;
+    color: var(--primary-color);
+    font-size: 15px;
+}
+
+#bookings .bookings-table-2 table td {
+    background: var(--light-color);
+    border-bottom: 1px solid var(--light-gray-color);
+}
+
+#bookings .bookings-table-2 table td .mc-img {
+    width: 60px;
+    height: 45px;
 }
 
 /* ======= Media Queries ======= */
@@ -174,7 +222,6 @@ section .display-4 {
         display: flex;
         justify-content: center;
         flex-direction: column;
-        /* gap: 1em; */
         margin-bottom: 11px;
     }
     #bookings .bookings-table table {
