--- a/celebrate/assets/css/utilities.css
+++ b/celebrate/assets/css/utilities.css
@@ -177,7 +177,7 @@
     color: var(--white-color);
     border: none;
     border-radius: 5px;
-    transition: transform .4s ease-in-out;
+    transition: all .4s ease-in-out;
 }
 
 .btn-outline {
@@ -219,6 +219,9 @@
 .bg-gray, .btn-gray {
     background: var(--gray-color);
     color: var(--white-color);
+}
+.btn-gray:hover {
+    background: var(--primary-color);
 }
 .bg-light-gray, .btn-light-gray {
     background: var(--light-gray-color);
