--- a/celebrate/assets/css/index.css
+++ b/celebrate/assets/css/index.css
@@ -234,6 +234,8 @@ section .display-4 {
     font-size: 14px;
     line-height: 1.6rem;
     width: 100%;
+    text-align: center;
+    text-decoration: none;
 }
 
 #mcs .btn-cart:hover {
